--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+	<meta name="description" content="모두를 편리를 위해 나아가는 7봇을 소개합니다. 7bot."/> <meta property="og:title" content=""7 BOT PROJECT">
 <head>
 	<title>새로운 디스코드 봇, 7봇</title>
 </head>
