--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 	<meta name="description" content="모두를 편리를 위해 나아가는 7봇을 소개합니다. 7bot."/> <meta property="og:title" content=""7 BOT PROJECT">
 <head>
 	<title>새로운 디스코드 봇, 7봇</title>
+	<link rel=" shortcut icon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
 	<header>
-		<h1>새로운 디스코드 봇, 7봇을 소개합니다!</h1>
+		<h2>새로운 디스코드 봇, 7봇을 소개합니다!</h2>
+		<hr>
+ <nav>
+		<center>
+		<h3>
+			<a href="https://7bot.ga/index.html">Main</a>   <a href="https://7bot.ga/developers.html">DEVELOPERS</a>  <a href="https://7bot.ga/7bot">Invite</a>
+		</h3>
+	</center>
+</nav>
+<hr>
+ <justify>
 		<ul>
 			<!-- 여기서 부터 7봇 설명 -->
 			<li><a href="https://7bot.ga/7bot">7봇 초대하기 | 7bot Invite</a></li>
@@ -19,21 +31,25 @@
 	<main>
 	<section>
 	<h3>모든 기능을! 7봇</h3>
-	<h4>이떄까지 가위바위봇과 존팔봇은, 서로 협력하고, 선의의 경쟁을 하며 살아 왔습니다. 하지만 둘이서 같은 서버에 있으면 큰 문제가 발생합니다.
+	<h5>이떄까지 가위바위봇과 존팔봇은, 서로 협력하고, 선의의 경쟁을 하며 살아 왔습니다. 하지만 둘이서 같은 서버에 있으면 큰 문제가 발생합니다.
 	그 이유는, 서로 명령어가 같은 부분이 있어서 충돌한다는거죠. 멘션 알림이 2번 오거나, 필터링이 2번 되니 에러가 발생한다거나.. 그래서 저와 
 	존팔님은 계획했습니다. <strong>기능을 전부 합치자!</strong> 7봇은 정말 뛰어난 성능을 보여주게 계획하고 있습니다. 내일도, 그 다음날도!
-	7봇은 계속 업데이트 되고, 좋아집니다!</h4>
+	7봇은 계속 업데이트 되고, 좋아집니다!</h5>
     </section>
     <!-- 여기서 부터는 7봇의 프사-->
+    <h3>7봇의 프로필 사진의 의미</h3>
     <h5><img src="profile.png" alt="7봇의 프로필 사진"></h5>
-    <h4>이 프로필 사진은, Lucky 7을 담고 있는 프로필 사진입니다. <strong>이 봇을 사용하면 당신의 생활이 편리해지고 럭키해질수 있습니다!<strong>:)</h4>
+    <h5>이 프로필 사진은, Lucky 7을 담고 있는 프로필 사진입니다. <strong>이 봇을 사용하면 당신의 생활이 편리해지고 럭키해질수 있습니다!<strong>:)</h5>
     </main>
+    <justify>
     <footer>
+    	<center>
+    	<hr>
     	<h5>
     		<p>이메일 주소: ceo@7bot.ga</p>
     		<p>7bot은 A.J.S 재단의 하위 기관입니다.</p>
     	</h5>
+    </center>
     </footer>
-		<hr>
 </body>
 </html>
