--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <nav>
 		<center>
 		<h3>
-			<a href="https://7bot.ga/index.html">Main</a>   <a href="https://7bot.ga/developers.html">DEVELOPERS</a>  <a href="https://7bot.ga/7bot">Invite</a>
+			<a href="https://7bot.ga/index.html">Main</a>   <a href="https://7bot.ga/developers.html">DEVELOPERS</a>  <a href="https://7bot.ga/7bot">Invite</a>   <a href="https://7bot.ga/about.html">About</a>
 		</h3>
 	</center>
 </nav>
